test/functions/deitz/test_default_param3.good
Error: Ambiguous call 'foo(:int)' (test_default_param3.chpl:10)
Candidates are:
  foo(i: int)
  foo(i: int, s: string)
